Jay: nav bar completed for website

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 </head>
 
 <body>
+    <nav>
+        <div class="logo">
+            <img id="logo" src="images/books-stack-of-three.png" alt="">
+        </div>
+        <h3>The BookNook</h3>
+        <input id="search" type="text" placeholder="Search..">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Books</a>
+        <a href="">Blog</a>
+        <a href="">Account</a>
+        <img id="user" src="images/user.png" alt="">
+        <a href="">Cart</a>
+        <img id="cart" src="images/shopping-cart.png" alt="">
+    </nav>
     <script src="lib/jquery-3.7.1.min.js">
     </script>
     <script src="app/app.js"></script>
