charley: added about page in about.hmtl and added about.scss file

--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Title</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<body>
+  <body>
     <nav>
-        <div class="logo">
-            <img id="logo" src="images/books-stack-of-three.png" alt="">
-        </div>
-        <h3>The BookNook</h3>
-        <input id="search" type="text" placeholder="Search..">
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Books</a>
-        <a href="">Blog</a>
-        <a href="">Account</a>
-        <img id="user" src="images/user.png" alt="">
-        <a href="">Cart</a>
-        <img id="cart" src="images/shopping-cart.png" alt="">
+      <div class="logo">
+        <img id="logo" src="images/books-stack-of-three.png" alt="" />
+      </div>
+      <h3>The BookNook</h3>
+      <input id="search" type="text" placeholder="Search.." />
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="">Books</a>
+      <a href="">Blog</a>
+      <a href="">Account</a>
+      <img id="user" src="images/user.png" alt="" />
+      <a href="">Cart</a>
+      <img id="cart" src="images/shopping-cart.png" alt="" />
     </nav>
-    <script src="lib/jquery-3.7.1.min.js">
-    </script>
+    <script src="lib/jquery-3.7.1.min.js"></script>
     <script src="app/app.js"></script>
-</body>
-
+  </body>
 </html>
