--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>Booknook</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
@@ -15,11 +15,12 @@
       </div>
       <h3>The BookNook</h3>
       <input id="search" type="text" placeholder="Search.." />
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="">Books</a>
-      <a href="">Blog</a>
-      <a href="">Account</a>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#books">Books</a>
+      <a href="#blog">Blog</a>
+      <a href="#account">Account</a>
+
       <img id="user" src="images/user.png" alt="" />
       <a href="">Cart</a>
       <img id="cart" src="images/shopping-cart.png" alt="" />
