charley: added home scss/html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
       <a href="">Cart</a>
       <img id="cart" src="images/shopping-cart.png" alt="" />
     </nav>
+
+    <footer>
+      <div>Copyright 2023, The BookNook</div>
+      <div class="links">
+        <a href="#home">home</a>
+        <a href="#about">about</a>
+        <a href="#books">books</a>
+        <a href="#blog">blog</a>
+      </div>
+      <div class="socials">
+        <i class="fa-brands fa-square-facebook fa-2xl"></i>
+        <i class="fa-brands fa-instagram fa-2xl"></i>
+        <i class="fa-brands fa-twitter fa-2xl"></i>
+      </div>
+    </footer>
     <script src="lib/jquery-3.7.1.min.js"></script>
     <script src="app/app.js"></script>
   </body>
