--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
       <a href="#blog">Blog</a>
       <a href="#account">Account</a>
       <img id="user" src="images/user.png" alt="" />
-      <a href="">Cart</a>
-      <img id="cart" src="images/shopping-cart.png" alt="" />
+      <a href="#cart">Cart</a>
+      <div class="logo">
+        <img id="cart" src="images/shopping-cart.png" alt="" />
+      </div>
     </nav>
 
     <footer>
