added feb-blogs.html to pages

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -11,7 +11,7 @@
             eros.
         </p>
         <button class="blogBtn">
-            <a href="#blog/febuary-favorites"> READ MORE</a>
+            <a href="#feb-blog"> READ MORE</a>
         </button>
     </div>
 </div>
