added bookclub.html into to pages

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -28,7 +28,7 @@
             eros.
         </p>
         <button class="blogBtn">
-            <a href="#blog/all-about-bookclubs">READ MORE</a>
+            <a href="#bookclub">READ MORE</a>
         </button>
     </div>
 </div>
