--- a/pages/books.html
+++ b/pages/books.html
@@ -11,11 +11,7 @@
     <h1>Booksets</h1>
     <div class="displayCase">
       <div class="displayCaseItem">
-        <img
-          class="bookset"
-          src="images/twilight-box-set.jpg"
-          alt="Twilight Boxset"
-        />
+        <img class="bookset" src="images/twilight-box-set.jpg" alt="Twilight Boxset" />
         <div class="itemInfo">
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -28,11 +24,7 @@
         </div>
       </div>
       <div class="displayCaseItem">
-        <img
-          class="bookset"
-          src="images/hp-box-set.jpg"
-          alt="Harry Potter Boxset"
-        />
+        <img class="bookset" src="images/hp-box-set.jpg" alt="Harry Potter Boxset" />
         <div class="itemInfo">
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -45,11 +37,7 @@
         </div>
       </div>
       <div class="displayCaseItem">
-        <img
-          class="bookset"
-          src="images/got-box-set.jpg"
-          alt="Game of Thrones Boxset"
-        />
+        <img class="bookset" src="images/got-box-set.jpg" alt="Game of Thrones Boxset" />
         <div class="itemInfo">
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -93,10 +81,7 @@
         </div>
       </div>
       <div class="displayCaseItem">
-        <img
-          src="images/elenor-roosevelt-biography.jpg"
-          alt="elenor-roosevelt-biography"
-        />
+        <img src="images/elenor-roosevelt-biography.jpg" alt="elenor-roosevelt-biography" />
         <div class="itemInfo">
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -184,11 +169,7 @@
         </div>
       </div>
       <div class="displayCaseItem">
-        <img
-          class="bookset"
-          src="images/fun facts about space.jpg"
-          alt="fun facts about space"
-        />
+        <img class="bookset" src="images/fun facts about space.jpg" alt="fun facts about space" />
         <div class="itemInfo">
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
