changed and added e-switch page and scss file

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -45,7 +45,7 @@
             eros.
         </p>
         <button class="blogBtn">
-            <a href="#blog/switching-to-e-books">READ MORE</a>
+            <a href="#e-switch">READ MORE</a>
         </button>
     </div>
 </div>
