Added styling for account/login page
Added javascript in model.js so the callback
shows alert error if the page cannot be loaded

Added login alert in app.js a yes or no message
depending on email/password provided

Edited footer padding

Edited account.html/scss

--- a/pages/bookclub.html
+++ b/pages/bookclub.html
@@ -1,14 +1,10 @@
-<div class="blogBackground1">
-  <div class="bloginfo-wrapper">
-    <h2 class="blogInfoHeader">ALL ABOUT BOOKCLUBS</h2>
-    <h4 class="blogInfoTxt">
-      What books are best for book club? Everything you need to know about
-      hosting your own!
-    </h4>
-  </div>
-
-</div>
+<div class="blogBackground1"></div>
 <div class="blogInfo">
+  <p class="blogInfoHeader">All About Books</p>
+  <p class="blogInfoTxt">
+    What books are best for book club? Everything you need to know about
+    hosting your own!
+  </p>
 </div>
 </div>
 
