--- a/pages/e-switch.html
+++ b/pages/e-switch.html
@@ -1,13 +1,11 @@
-<div class="blogBackground3">
-  <div class="bloginfo-wrapper">
-    <h2 class="blogInfoHeader">SWITCHING TO E-READING?</h2>
-    <h4 class="blogInfoTxt">What e-reader are best for you? everthing you need to know about electronic reading!</h4>
-  </div>
-
+<div class="blogBackground3"></div>
+<div class="blogInfo">
+  <p class="blogInfoHeader">SWITCHING TO E-READING?</p>
+  <p class="blogInfoTxt">
+    What e-readers are best for you? everything you need to know about
+    electronic reading!
+  </p>
 </div>
-
-
-<div class="blogInfo"></div>
 </div>
 
 <div class="blog-section">
