fixing styling on account page

--- a/pages/account.html
+++ b/pages/account.html
@@ -2,21 +2,31 @@
   <form action="" class="login-Form">
     <h2 class="Login-Heading">Login Here!</h2>
 
-    <input type="text" placeholder="Email-Address:" />
-    <input type="text" placeholder="Password:" />
+    <label for="login-email"></label>
+    <input id="login-email" type="email" placeholder="Email Address" />
 
-    <button type="submit">Login</button>
+    <label for="login-password"></label>
+    <input id="login-password" type="password" placeholder="Password" />
+
+    <button type="submit">LOGIN</button>
   </form>
 
-  <form action="">
+  <form action="" class="signup-Form">
     <p>don't have an account?</p>
-    <h2 class="Signin-Heading">Sign Up!</h2>
+    <h2 class="Signin-Heading">Sign up!</h2>
 
-    <input type="text" placeholder="First Name:" />
-    <input type="text" placeholder="Last Name:" />
-    <input type="text" placeholder="Email Address:" />
-    <input type="text" placeholder="Password:" />
+    <label for="signup-first-name"></label>
+    <input id="signup-first-name" type="text" placeholder="First Name" />
 
-    <button>Sign Up</button>
+    <label for="signup-last-name"></label>
+    <input id="signup-last-name" type="text" placeholder="Last Name" />
+
+    <label for="signup-email"></label>
+    <input id="signup-email" type="email" placeholder="Email Address" />
+
+    <label for="signup-password"></label>
+    <input id="signup-password" type="password" placeholder="Password" />
+
+    <button type="submit">SIGN UP</button>
   </form>
 </div>
