charley: (any recent commits without a name are charley's) fixed styling on blog page, worked on responsiveness of on login/signup

--- a/pages/account.html
+++ b/pages/account.html
@@ -3,16 +3,26 @@
     <h2 class="Login-Heading">Login Here!</h2>
 
     <label for="login-email"></label>
-    <input id="login-email" type="email" placeholder="Email Address" />
+    <input
+      id="login-email"
+      type="email"
+      name="email"
+      placeholder="Email Address"
+    />
 
     <label for="login-password"></label>
-    <input id="login-password" type="password" placeholder="Password" />
+    <input
+      id="login-password"
+      type="password"
+      name="password"
+      placeholder="Password"
+    />
 
     <button type="submit">LOGIN</button>
   </form>
 
   <form action="" class="signup-Form">
-    <p>don't have an account?</p>
+    <p>Don't have an account?</p>
     <h2 class="Signin-Heading">Sign up!</h2>
 
     <label for="signup-first-name"></label>
