-fixing styling on account page -Added styling for account -Added styling for login page -Added website walkthrough to README -Edited books page -Added cart.js and started the add to cart function -edited app.js

--- a/pages/books.html
+++ b/pages/books.html
@@ -11,7 +11,11 @@
     <h1>Booksets</h1>
     <div class="displayCase">
       <div class="displayCaseItem">
-        <img class="bookset" src="images/twilight-box-set.jpg" alt="Twilight Boxset" />
+        <img
+          class="bookset"
+          src="images/twilight-box-set.jpg"
+          alt="Twilight Boxset"
+        />
         <div class="itemInfo">
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -24,7 +28,11 @@
         </div>
       </div>
       <div class="displayCaseItem">
-        <img class="bookset" src="images/hp-box-set.jpg" alt="Harry Potter Boxset" />
+        <img
+          class="bookset"
+          src="images/hp-box-set.jpg"
+          alt="Harry Potter Boxset"
+        />
         <div class="itemInfo">
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -37,7 +45,11 @@
         </div>
       </div>
       <div class="displayCaseItem">
-        <img class="bookset" src="images/got-box-set.jpg" alt="Game of Thrones Boxset" />
+        <img
+          class="bookset"
+          src="images/got-box-set.jpg"
+          alt="Game of Thrones Boxset"
+        />
         <div class="itemInfo">
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -81,7 +93,10 @@
         </div>
       </div>
       <div class="displayCaseItem">
-        <img src="images/elenor-roosevelt-biography.jpg" alt="elenor-roosevelt-biography" />
+        <img
+          src="images/elenor-roosevelt-biography.jpg"
+          alt="elenor-roosevelt-biography"
+        />
         <div class="itemInfo">
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -169,7 +184,11 @@
         </div>
       </div>
       <div class="displayCaseItem">
-        <img class="bookset" src="images/fun facts about space.jpg" alt="fun facts about space" />
+        <img
+          class="bookset"
+          src="images/fun facts about space.jpg"
+          alt="fun facts about space"
+        />
         <div class="itemInfo">
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -179,6 +198,233 @@
           </p>
           <div class="price">$7.99</div>
           <div class="addBtn">Add to Cart</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+-----------------------------------
+
+<section class="books">
+  <div class="row">
+    <h1>Booksets</h1>
+    <div class="displayCase">
+      <div class="displayCaseItem">
+        <img
+          class="bookset"
+          src="images/twilight-box-set.jpg"
+          alt="Twilight Boxset"
+        />
+        <div class="itemInfo">
+          <p class="description">Description for Twilight Boxset...</p>
+          <div class="price">$99.99</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="Twilight Boxset"
+            data-price="99.99"
+            data-image="images/twilight-box-set.jpg"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+      <div class="displayCaseItem">
+        <img
+          class="bookset"
+          src="images/hp-box-set.jpg"
+          alt="Harry Potter Boxset"
+        />
+        <div class="itemInfo">
+          <p class="description">Description for Harry Potter Boxset...</p>
+          <div class="price">$100</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="Harry Potter Boxset"
+            data-price="100"
+            data-image="images/hp-box-set.jpg"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+      <div class="displayCaseItem">
+        <img
+          class="bookset"
+          src="images/got-box-set.jpg"
+          alt="Game of Thrones Boxset"
+        />
+        <div class="itemInfo">
+          <p class="description">Description for Game of Thrones Boxset...</p>
+          <div class="price">$100</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="Game of Thrones Boxset"
+            data-price="100"
+            data-image="images/got-box-set.jpg"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <h1>Black History Books</h1>
+    <div class="displayCase">
+      <div class="displayCaseItem">
+        <img src="images/finding-me.jpg" alt="Finding Me" />
+        <div class="itemInfo">
+          <p class="description">Description for Finding Me...</p>
+          <div class="price">$27.99</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="Finding Me"
+            data-price="27.99"
+            data-image="images/finding-me.jpg"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+      <div class="displayCaseItem">
+        <img src="images/mlk-biography.jpg" alt="MLK Biography" />
+        <div class="itemInfo">
+          <p class="description">Description for MLK Biography...</p>
+          <div class="price">$19.99</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="MLK Biography"
+            data-price="19.99"
+            data-image="images/mlk-biography.jpg"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+      <div class="displayCaseItem">
+        <img
+          src="images/elenor-roosevelt-biography.jpg"
+          alt="Eleanor Roosevelt Biography"
+        />
+        <div class="itemInfo">
+          <p class="description">
+            Description for Eleanor Roosevelt Biography...
+          </p>
+          <div class="price">$17.99</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="Eleanor Roosevelt Biography"
+            data-price="17.99"
+            data-image="images/elenor-roosevelt-biography.jpg"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <h1>Horror Books</h1>
+    <div class="displayCase">
+      <div class="displayCaseItem">
+        <img src="images/misery.jpg" alt="Misery" />
+        <div class="itemInfo">
+          <p class="description">Description for Misery...</p>
+          <div class="price">$19.99</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="Misery"
+            data-price="19.99"
+            data-image="images/misery.jpg"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+      <div class="displayCaseItem">
+        <img src="images/frankenstein.jpg" alt="Frankenstein" />
+        <div class="itemInfo">
+          <p class="description">Description for Frankenstein...</p>
+          <div class="price">$15.99</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="Frankenstein"
+            data-price="15.99"
+            data-image="images/frankenstein.jpg"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+      <div class="displayCaseItem">
+        <img src="images/phantoms.jpg" alt="Phantoms" />
+        <div class="itemInfo">
+          <p class="description">Description for Phantoms...</p>
+          <div class="price">$19.99</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="Phantoms"
+            data-price="19.99"
+            data-image="images/phantoms.jpg"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <h1>Children's Books</h1>
+    <div class="displayCase">
+      <div class="displayCaseItem">
+        <img src="images/winnie-the-pooh.jpg" alt="Winnie the Pooh" />
+        <div class="itemInfo">
+          <p class="description">Description for Winnie the Pooh...</p>
+          <div class="price">$19.99</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="Winnie the Pooh"
+            data-price="19.99"
+            data-image="images/winnie-the-pooh.jpg"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+      <div class="displayCaseItem">
+        <img src="images/cat-in-the-hat.jpg" alt="Cat in the Hat" />
+        <div class="itemInfo">
+          <p class="description">Description for Cat in the Hat...</p>
+          <div class="price">$15.99</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="Cat in the Hat"
+            data-price="15.99"
+            data-image="images/cat-in-the-hat.jpg"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+      <div class="displayCaseItem">
+        <img
+          src="images/fun-facts-about-space.jpg"
+          alt="Fun Facts About Space"
+        />
+        <div class="itemInfo">
+          <p class="description">Description for Fun Facts About Space...</p>
+          <div class="price">$7.99</div>
+          <button
+            class="addBtn add-to-cart"
+            data-title="Fun Facts About Space"
+            data-price="7.99"
+            data-image="images/fun-facts-about-space.jpg"
+          >
+            Add to Cart
+          </button>
         </div>
       </div>
     </div>
