--- a/pages/cart.html
+++ b/pages/cart.html
@@ -1,30 +1,29 @@
 <div class="cart">
-
-    <div class="content">
-        <div class="img">
-        <img src="images/misery.jpg" alt="misery">
-        </div>
-        <div class="text">
-            <h1>Misery By Stephen King</h1>
-            <h2>$19.99</h2>
-            <h3>In stock</h3>
-            <h4>Qty: 1   change | delete</h4>
-        </div>
+  <div class="content">
+    <div class="img">
+      <img src="images/misery.jpg" alt="misery" />
     </div>
-    <div class="line"></div>
-
-    <div class="mlk">
-        <div class="img">
-            <img src="images/mlk-biography.jpg" alt="mlk-biography">
-        </div>
-        <div class="text">
-            <h1>The Autobiography of Martin Luther King Jr. Edited By Clayborne Carson</h1>
-            <h2>$19.99</h2>
-            <h3>In stock</h3>
-            <h4>Qty: 1   change | delete</h4>
-
-        </div>
+    <div class="text">
+      <h1>Misery By Stephen King</h1>
+      <h2>$19.99</h2>
+      <h3>In stock</h3>
+      <h4>Qty: 1 change | delete</h4>
     </div>
-    <div class="line"></div>
+  </div>
+  <div class="line"></div>
 
+  <div class="mlk">
+    <div class="img">
+      <img src="images/mlk-biography.jpg" alt="mlk-biography" />
+    </div>
+    <div class="text">
+      <h1>
+        The Autobiography of Martin Luther King Jr. Edited By Clayborne Carson
+      </h1>
+      <h2>$19.99</h2>
+      <h3>In stock</h3>
+      <h4>Qty: 1 change | delete</h4>
+    </div>
+  </div>
+  <div class="line"></div>
 </div>
