Added cart.js; Added cart.js script

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       type="module"
       src="lib/code.jquery.com_jquery-3.7.1.min.js"
     ></script>
+    <script type="module" src="cart/cart.js"></script>
     <script type="module" src="app/app.js"></script>
   </body>
 </html>
